added grid lines and axes to each plot

--- a/index.html
+++ b/index.html
@@ -17,30 +17,30 @@
                 <fieldset>
                 <legend>Select City:</legend>
                 <div>
-                    <label for="CLT"><input type="checkbox" id="CLT" name="source" value="CLT" onchange="checkboxChange(value)"> Charlotte, North Carolina</label>
+                    <label for="CLT"><input type="checkbox" id="CLT" name="source" value="CLT" onchange="checkboxChange(value)"> Charlotte,<br> &nbsp&nbsp &nbsp&nbsp North Carolina</label>
                 </div>
                 <div>
-                    <label for="CQT"><input type="checkbox" id="CQT" name="source" value="CQT" onchange="checkboxChange(value)"> Los Angeles, California</label>
+                    <label for="CQT"><input type="checkbox" id="CQT" name="source" value="CQT" onchange="checkboxChange(value)"> Los Angeles,<br> &nbsp&nbsp &nbsp&nbsp California</label>
                 </div>
                 <div>
-                    <label for="IND"><input type="checkbox" id="IND" name="source" value="IND" onchange="checkboxChange(value)"> Indianapolis, Indiana</label>
+                    <label for="IND"><input type="checkbox" id="IND" name="source" value="IND" onchange="checkboxChange(value)"> Indianapolis,<br> &nbsp&nbsp &nbsp&nbsp Indiana</label>
                 </div>
                 <div>
-                    <label for="JAX"><input type="checkbox" id="JAX" name="source" value="JAX" onchange="checkboxChange(value)"> Jacksonville, Florida</label>
+                    <label for="JAX"><input type="checkbox" id="JAX" name="source" value="JAX" onchange="checkboxChange(value)"> Jacksonville,<br> &nbsp&nbsp &nbsp&nbsp Florida</label>
                 </div>
                 <div>
-                    <label for="MDW"><input type="checkbox" id="MDW" name="source" value="MDW" onchange="checkboxChange(value)"> Chicago, Illinois</label>
+                    <label for="MDW"><input type="checkbox" id="MDW" name="source" value="MDW" onchange="checkboxChange(value)"> Chicago,<br> &nbsp&nbsp &nbsp&nbsp Illinois</label>
                 </div>
                 <div>
-                    <label for="PHL"><input type="checkbox" id="PHL" name="source" value="PHL" onchange="checkboxChange(value)"> Philadelphia, Pennsylvania</label>
+                    <label for="PHL"><input type="checkbox" id="PHL" name="source" value="PHL" onchange="checkboxChange(value)"> Philadelphia,<br> &nbsp&nbsp &nbsp&nbsp Pennsylvania</label>
                 </div>
                 <div>
-                    <label for="PHX"><input type="checkbox" id="PHX" name="source" value="PHX" onchange="checkboxChange(value)"> Phoenix, Arizona</label>
+                    <label for="PHX"><input type="checkbox" id="PHX" name="source" value="PHX" onchange="checkboxChange(value)"> Phoenix,<br> &nbsp&nbsp &nbsp&nbsp Arizona</label>
                 </div>
                 </fieldset>
             </form>
-            <svg class="sections percipitation" width="1130" height="300">
-                <g>
+            <svg class="sections precipitation" width="1160" height="320">
+                <g class="precipitation">
                     <rect width="1130" height="300" 
                     style="border: 1px solid #777;"></rect>
                 </g>
@@ -48,21 +48,21 @@
         </div>
         <!-- The bottom 3 visualizations -->
         <div id="second-layer">
-            <svg class="sections record-high" width="660" height="280">
-                <g>
+            <svg class="sections record-high" width="690" height="300">
+                <g class="record-high">
                     <rect width="660" height="280" 
                     style="border: 1px solid #777;"></rect>
                 </g>
             </svg>
-            <svg class="sections record-low" width="660" height="280">
-                <g>
+            <svg class="sections record-low" width="690" height="300">
+                <g class="record-low">
                     <rect width="660" height="280" 
                     style="border: 1px solid #777;"></rect>
                 </g>
             </svg>
-            <svg class="sections fast-facts" width="1340" height="100">
+            <svg class="sections fast-facts" width="1390" height="120">
                 <g>
-                    <rect width="1340" height="100" 
+                    <rect width="1360" height="100" 
                     style="border: 1px solid #777;"></rect>
                 </g>
             </svg>
