attempting to draw lines on first graph, needs fixed

--- a/index.html
+++ b/index.html
@@ -48,24 +48,24 @@
         </div>
         <!-- The bottom 3 visualizations -->
         <div id="second-layer">
-            <svg class="sections record-high" width="690" height="300">
+            <svg class="sections record-high" width="690" height="310">
                 <g class="record-high">
                     <rect width="660" height="280" 
                     style="border: 1px solid #777;"></rect>
                 </g>
             </svg>
-            <svg class="sections record-low" width="690" height="300">
+            <svg class="sections record-low" width="690" height="310">
                 <g class="record-low">
                     <rect width="660" height="280" 
                     style="border: 1px solid #777;"></rect>
                 </g>
             </svg>
-            <svg class="sections fast-facts" width="1390" height="120">
-                <g>
+            <!-- <svg class="sections fast-facts" width="1390" height="120">
+                <g class="fast-facts">
                     <rect width="1360" height="100" 
                     style="border: 1px solid #777;"></rect>
                 </g>
-            </svg>
+            </svg> -->
         </div>
         
     </div>
