attempted lines again, failed

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 </div>
                 </fieldset>
             </form>
-            <svg class="sections precipitation" width="1160" height="320">
+            <svg class="sections precipitationG" width="1160" height="320">
                 <g class="precipitation">
                     <rect width="1130" height="300" 
                     style="border: 1px solid #777;"></rect>
@@ -48,13 +48,13 @@
         </div>
         <!-- The bottom 3 visualizations -->
         <div id="second-layer">
-            <svg class="sections record-high" width="690" height="310">
+            <svg class="sections record-highG" width="690" height="310">
                 <g class="record-high">
                     <rect width="660" height="280" 
                     style="border: 1px solid #777;"></rect>
                 </g>
             </svg>
-            <svg class="sections record-low" width="690" height="310">
+            <svg class="sections record-lowG" width="690" height="310">
                 <g class="record-low">
                     <rect width="660" height="280" 
                     style="border: 1px solid #777;"></rect>
